--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -384,13 +384,13 @@ workflows:
       #     requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
-      - build-backend
-      - deploy-infrastructure:
-            requires: [build-backend]
-      - deploy-backend:
-          requires: [deploy-infrastructure]
-      # - smoke-test
-      #     requires: [deploy-backend, deploy-frontend]
+      # - build-backend
+      # - deploy-infrastructure:
+      #       requires: [build-backend]
+      # - deploy-backend:
+      #     requires: [deploy-infrastructure]
+      - smoke-test
+          requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
       # - cleanup:
