--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -306,10 +306,10 @@ jobs:
                 return 1
             fi
       - run:
+#           URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
           name: Frontend smoke test.
           command: |
-#            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-            URL=http://udapeople-79855a1.s3-website-us-east-1.amazonaws.com/#/employees           
+            URL="http://udapeople-79855a1.s3-website-us-east-1.amazonaws.com/#/employees"
             echo ${URL} 
             if curl -s ${URL} | grep "Welcome"
             then
