--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,8 +275,8 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
 
-        - destroy-environment
-        - revert-migrations  
+      - destroy-environment
+      - revert-migrations  
                     
 
   smoke-test:
@@ -427,7 +427,7 @@ workflows:
       #       requires: [build-backend]
       # - deploy-backend:
       #     requires: [deploy-infrastructure]
-      - smoke-test
+      # - smoke-test
           # requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
