--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -371,8 +371,9 @@ jobs:
           command: |
             export OldWorkflowID=$(cat ./textfile.txt)
             echo $OldWorkflowID
-            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+            export STACKS=[]($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                              --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+            echo Stack names: "${STACKS[@]}"
       - run:
           name: Remove old stacks and files
           command: |
