--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,7 +226,7 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=instance-state-name,Values=running" "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
@@ -371,7 +371,7 @@ jobs:
       - attach_workspace:
           at: .
       - run:
-          name: Get old stack workflow id
+          name: Get old stack workflow id and start cleanup
           command: |
             export OldWorkflowID=$(cat ./textfile.txt)
             echo $OldWorkflowID
