--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -412,7 +412,7 @@ jobs:
           command: |
             aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters "Name=instance-state-name,Values=running" "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --filters "Name=instance-state-name,Values=running" "Name=tag-value,Values=udapeople" \
             --output text >> ./.circleci/ansible/inventory.txt
             cat inventory.txt
             ansible-playbook -i inventory.txt install-exporter.yml
