--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -391,7 +391,7 @@ jobs:
 
   install-exporter:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: amazon/aws-cli
     steps:
       - checkout
       - add_ssh_keys:
@@ -399,12 +399,12 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --no-cache tar
-            apk --no-cache add curl
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            ./aws/install
-            apk add --update ansible
+            yum install -y tar gzip
+            yum update -y
+            curl -sL https://rpm.nodesource.com/setup_10.x | bash -
+            yum install -y nodejs
+            yum -y install epel-release
+            yum -y install ansible
       - run:
           name: Add back-end ip to ansible inventory
           command: |
