--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -403,7 +403,8 @@ jobs:
             yum update -y
             curl -sL https://rpm.nodesource.com/setup_10.x | bash -
             yum install -y nodejs
-            yum -y install epel-release
+            yum -y install epel-repo
+            yum update -y
             yum -y install ansible
       - run:
           name: Add back-end ip to ansible inventory
