--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -411,8 +411,9 @@ jobs:
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filters "Name=instance-state-name,Values=running" "Name=tag-value,Values=udapeople" \
             --output text >> ./.circleci/ansible/inventory.txt
-            cat ./.circleci/ansible/inventory.txt
-            ansible-playbook -i ./.circleci/ansible/inventory.txt install-exporter.yml
+            cd ./.circleci/ansible/
+            cat inventory.txt
+            ansible-playbook -i inventory.txt install-exporter.yml
 
 
             
