--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -353,10 +353,8 @@ jobs:
             --stack-name InitialStack \
             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
             --tags project=udapeople
-      # # - destroy-environment
-      # # - revert-migrations
-
-
+      - destroy-environment
+      - revert-migrations
 
   cleanup:
     docker:
