--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,13 +18,13 @@ commands:
     parameters:
       workflow_id:
         type: string 
-        default: "${CIRCLE_WORKFLOW_ID:0:7}"  
+        default: ${CIRCLE_WORKFLOW_ID:0:7}  
     steps:
       - run:
           name: Revert migrations
           When: on_fail
           command: |
-            SUCCESS=$(curl --insecure https://kvdb.io/SKwi1rMgjj3xezMRW4hiBM/migration_)
+            SUCCESS=$(curl --insecure https://kvdb.io/SKwi1rMgjj3xezMRW4hiBM/migration_${CIRCLE_WORKFLOW_ID:0:7} )
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
@@ -318,7 +318,7 @@ jobs:
             echo ${URL} 
             if curl -s ${URL} | grep "Welcome"
             then
-              failed
+              echo "Passed successfully"
             else
               return 1
             fi
@@ -443,9 +443,9 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
-      # - install-exporter:
-      #     requires: [cleanup]
+      - cloudfront-update:
+          requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
+      - install-exporter:
+          requires: [cleanup]
